--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,8 @@
+<h1>{{title}}</h1>
 <h2 id='title'>Welcome to Ember.js</h2>
+<p>go {{link-to 'home' 'index'}}</p>
+<p>see {{link-to 'an existing logo' 'view' 55}}</p>
+<p>edit {{link-to 'an existing logo' 'logo' 55}}</p>
+<p>make a {{link-to 'new logo' 'new'}}</p>
 
 {{outlet}}
