adds initial layout

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,8 +1,18 @@
-<h1>{{title}}</h1>
-<h2 id='title'>Welcome to Ember.js</h2>
-<p>go {{link-to 'home' 'index'}}</p>
-<p>see {{link-to 'an existing logo' 'view' 55}}</p>
-<p>edit {{link-to 'an existing logo' 'logo' 55}}</p>
-<p>make a {{link-to 'new logo' 'new'}}</p>
+<div class="l-full">
+    <section class="l-sidebar l-sidebar--highlight">
+        <article class="widget">
+            <label class="widget-label" for="">Enter your school name:</label>
+            <input type="text">
+        </article>
+        <article class="widget">
+            <label class="widget-label" for="">Choose a font:</label>
+            <input type="text">
+        </article>
+        <article class="widget">
+            <label class="widget-label" for="">Choose a font:</label>
 
-{{outlet}}
+        </article>
+    </section>
+    <main class="l-content">
+    </main>
+</div>
