messing around with routes and template files

--- a/app/templates/view.hbs
+++ b/app/templates/view.hbs
@@ -1,2 +1,6 @@
 <h3>view.hbs</h3>
-{{outlet}}
+<h4>logo viewer</h4>
+<p>model: {{model.title}}</p>
+<p>{{ model.flowers }}</p>
+<p>outlet: {{outlet}}</p>
+
