--- a/app/styles/logo-maker.scss
+++ b/app/styles/logo-maker.scss
@@ -1,5 +1,10 @@
 @import "normalize";
+@import "compass";
 
 @import "base";
 @import "vars";
 @import "layout";
+@import "widget";
+@import "box";
+@import "buttons";
+@import "grid";
