can add flowers and text to canvas

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -63,9 +63,9 @@
         <!-- .widget -->
     </section>
     <!-- .l-sidebar -->
-    <main class="l-content">
-        <h2>selected flowers: {{selectedFlowers.length}}</h2>
-        {{fabric-canvas name=logo.name font=logo.font}}
+    <main class="l-content" id="content">
+        <h2 style="position: absolute;">selected flowers: {{selectedFlowers.length}}</h2>
+        {{fabric-canvas name=logo.name font=logo.font flowers=selectedFlowers}}
     </main>
     <!-- .l-content -->
 </div>
