reverting to globalChoices

--- a/app/styles/_flowers.scss
+++ b/app/styles/_flowers.scss
@@ -1,16 +1,8 @@
 .flowers {
-    max-width: 300;
-    margin: 0 auto;
-
-    text-align: justify;
-    font-size: 0;
-
-    &:after {
-        content: '';
-        width: 100%;
-    }
+    display: flex;
+    justify-content: center;
 }
 
 .flower {
-    display: inline-block;
+    margin: 0 15px;
 }
