--- a/app/templates/components/palette-box.hbs
+++ b/app/templates/components/palette-box.hbs
@@ -1,4 +1,4 @@
-<button class="btn btn--highlight" {{bind-attr class=palette.selected}} {{action 'setPalette' palette}}>
+<button {{bind-attr class=':btn :btn--highlight palette.selected'}} {{action 'setPalette' palette}}>
     <div class="palette">
     {{#each color in palette.colors}}
         <span {{bind-attr class="isBigPalette:six-color:two-color"}}>
