--- a/app/styles/_logo.scss
+++ b/app/styles/_logo.scss
@@ -3,21 +3,19 @@
     width: 100%;
     max-width: 500px;
 
-    &.top {
+    &.small {
+        height: 70px;
     }
+
 
     &.left,
     &.right,
+    &.top,
     &.bottom {
         max-width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
-
-        .logo-image {
-            margin: 0 5px;
-        }
-
     }
 
     &.right {
@@ -26,11 +24,13 @@
         }
     }
 
+    &.top,
     &.bottom {
         flex-direction: column;
-        > .logo-images {
-            order: 1;
-        }
+    }
+
+    &.bottom > .logo-images {
+        order: 1;
     }
 }
 
@@ -40,7 +40,11 @@
 }
 
 .logo-image {
-    margin: 0 15px;
+    margin: 0 5px;
+
+    .small & {
+        max-height: 25px;
+    }
 }
 
 .logo-textbox {
@@ -48,6 +52,11 @@
 
     font-size: 55px;
     font-size: rems(55);
+
+    .small & {
+        font-size: 8px;
+        font-size: rems(8);
+    }
 
     &.times {
         font-family: "Times New Roman";
@@ -72,8 +81,12 @@
 
 .logo-title,
 .logo-subtitle {
-    display: flex;
-    justify-content: space-between;
+    // display: flex;
+    // justify-content: space-between;
+
+    // .small & {
+    //     display: block;
+    // }
 }
 
 .logo-subtitle > span {
