--- a/app/templates/components/logo-view.hbs
+++ b/app/templates/components/logo-view.hbs
@@ -4,8 +4,8 @@
 {{/each}}
 </div>
 <div {{bind-attr class=":logo-textbox selectedFont.className"}}>
-    {{letter-split text=name palette=palette class='logo-title'}}
+    {{letter-split text=name palette=palette class='logo-title' size=size}}
     <div {{bind-attr class=":logo-hide name::hide"}}>
-    {{letter-split text='Montessori School' palette=palette class='logo-subtitle'}}
+    {{letter-split text='Montessori School' palette=palette class='logo-subtitle' size=size}}
     </div>
 </div>
