adds borders to two-by-grid and sets sidebar overflow to auto

--- a/app/styles/_layout.scss
+++ b/app/styles/_layout.scss
@@ -8,7 +8,7 @@
 .l-sidebar {
     padding: rems($base);
     width: 325px;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 .l-sidebar--highlight {
