--- a/app/styles/_grid.scss
+++ b/app/styles/_grid.scss
@@ -15,13 +15,30 @@
         display: inline-block;
         width: (100%/3.1);
     }
+
+    .grid-item:nth-child(3n) {
+        border-right: none;
+    }
+
+    .grid-item:nth-last-child(-n+3) {
+        border-bottom: none;
+    }
 }
 
 .grid--two {
-    .grid-item {
+    .grid-item,
+    .gap {
         display: inline-block;
         width: (100%/2.1);
         vertical-align: top;
+    }
+
+    .grid-item:nth-child(2n) {
+        border-right: none;
+    }
+
+    .grid-item:nth-last-child(-n+2) {
+        border-bottom: none;
     }
 }
 
@@ -31,12 +48,4 @@
     text-align: center;
     border-right: 1px $offwhite solid;
     border-bottom: 1px $offwhite solid;
-
-    &:nth-child(3n) {
-        border-right: none;
-    }
-
-    &:nth-last-child(-n+3) {
-        border-bottom: none;
-    }
 }
