--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,12 +1,15 @@
+@import "vars";
+
 @import "normalize";
 @import "compass";
 
 @import "base";
-@import "vars";
 @import "layout";
 @import "widget";
+@import "dropdown";
 @import "box";
 @import "buttons";
 @import "grid";
 @import "logo";
 @import "palette";
+@import "fonts";
