--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -7,6 +7,12 @@
 html,
 body {
     height: 100%;
+    font-size: 16px;
+    font-family: "HelveticaNeueLight", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    font-weight: 200;
+    -webkit-font-smoothing: antialiased;
+    letter-spacing: 0.1px;
+    color: $gray;
 }
 
 input,
