--- a/app/styles/_widget.scss
+++ b/app/styles/_widget.scss
@@ -4,10 +4,13 @@
 
 .widget-label {
     display: block;
+    font-size: 1em;
+    line-height: 1.5em;
 }
 
 .widget-input {
     display: block;
     width: 100%;
+    padding: 5px;
     @include box-sizing(border-box);
 }
