Adds ApplicationAdapter (app/adapters/application.js) to set up FixtureAdapter instead of attaching it in app.js (pre-instantiation)
renames and nests index and view routes under jurisdiciton route

changed jurisdiciton dropdown to use the link-to helper, since we're
actually navigating routes (as per the email attachment)

but this makes selectedJurisdiction kind of a pain to implement becuase
the transition to the new route interferes with the action to set the
selectedJurisdction property

--- a/app/templates/components/jurisdiction-dropdown.hbs
+++ b/app/templates/components/jurisdiction-dropdown.hbs
@@ -1,12 +1,12 @@
 
-<span {{bind-attr class=":dropdown-label selectedJurisdiction.name"}}>
-  {{ selectedJurisdiction.name }}
+<span class="dropdown-label">
+  {{selectedJurisdiction.name}}
 </span>
 
 <ul class="dropdown-list jurisdiction-dropdown">
   {{#each j in jurisdictions}}
-      <li class="dropdown-item" {{action 'selectJurisdiction' j}}>
-          <button {{bind-attr class=":dropdown-option j.name"}}>{{j.name}}</button>
+      <li class="dropdown-item" {{action 'setJurisdiction' j}}>
+          {{#link-to 'jurisdiction.view' j class="dropdown-option"}}{{j.name}}{{/link-to}}
       </li>
   {{/each}}
 </ul>
