--- a/app/templates/logo.hbs
+++ b/app/templates/logo.hbs
@@ -1,7 +1,7 @@
 <section class="l-sidebar l-sidebar--highlight">
     <article class="widget">
         <label class="widget-label" for="">Enter your school name:</label>
-        {{input class='widget-input' type='text' value=name}}
+        {{input class='widget-input' type='text' value=model.name}}
     </article>
     <article class="widget">
         <label class="widget-label" for="">Choose a font:</label>
