--- a/app/templates/jurisdiction/index.hbs
+++ b/app/templates/jurisdiction/index.hbs
@@ -1,4 +1,15 @@
 
+
+  <div class="header">
+    <h1>
+      {{ model.name }} Licensing
+    </h1>
+  </div>
+
+  <div class="step-by-step">
+    Step-by-step guide to regulatory requirements 
+  </div>
+
   <div class="get-started">
     Choose a state to get started
   </div>
