adds link-to jurisdiction from home

--- a/app/templates/logo.hbs
+++ b/app/templates/logo.hbs
@@ -1,4 +1,7 @@
 <section class="l-sidebar l-sidebar--highlight">
+    <div class="box">
+        {{link-to 'Go To Licensing' 'jurisdiction'}}
+    </div>
     <article class="widget">
         <label class="widget-label" for="">Enter your school name:</label>
         {{input class='widget-input' type='text' value=model.name}}
