adding ageRanges from MA regs

--- a/app/templates/components/student-age-dropdown.hbs
+++ b/app/templates/components/student-age-dropdown.hbs
@@ -5,10 +5,10 @@
 </span>
 
 <ul class="dropdown-list student-age-dropdown">
-  {{#each ageRange in studentAgeRanges}}
+  {{#each ageRange in model.ageRanges}}
     <li class="dropdown-item" {{action 'selectStudentAge' ageRange}}>
       <div class="dropdown-option">
-        {{ ageRange.value }}
+        {{ ageRange.ageRange }}
       </div>
     </li>
   {{/each}}
