trying to get ageRange part of fixture to come through into template

--- a/app/templates/components/student-age-dropdown.hbs
+++ b/app/templates/components/student-age-dropdown.hbs
@@ -4,8 +4,11 @@
   {{selectedStudentAge.value}}
 </span>
 
+{{ ageRanges }}
+
 <ul class="dropdown-list student-age-dropdown">
-  {{#each ageRange in model.ageRanges}}
+  {{#each ageRange in studentAgeRanges}}
+    {{ ageRange }}
     <li class="dropdown-item" {{action 'selectStudentAge' ageRange}}>
       <div class="dropdown-option">
         {{ ageRange.ageRange }}
