--- a/app/templates/components/teacher-requirements.hbs
+++ b/app/templates/components/teacher-requirements.hbs
@@ -19,7 +19,7 @@
             id = 'stuentAgeDropdown'
             selectedStudentAge=selectedStudentAge
             action = 'setStudentAge'
-            studentAgeRanges = studentAgeRanges
+            studentAgeRanges = model.ageRanges
           }}
         </div>
       </div>
