adding MA model for now, not what I wanted but was having trouble getting the data included as part of the model

--- a/app/templates/components/student-age-dropdown.hbs
+++ b/app/templates/components/student-age-dropdown.hbs
@@ -1,14 +1,11 @@
 
 
 <span class="dropdown-label">
-  {{selectedStudentAge.value}}
+  {{selectedStudentAge.ageRange}}
 </span>
-
-{{ ageRanges }}
 
 <ul class="dropdown-list student-age-dropdown">
   {{#each ageRange in studentAgeRanges}}
-    {{ ageRange }}
     <li class="dropdown-item" {{action 'selectStudentAge' ageRange}}>
       <div class="dropdown-option">
         {{ ageRange.ageRange }}
